[FIX] mail: fix cropped badge
In community the badges seemed to be cropped. This commit fixes the
badges' shape by replacing the fixed `min-width` value with the
corresponding variable.

task-5223774

--- a/addons/mail/static/src/core/common/core.scss
+++ b/addons/mail/static/src/core/common/core.scss
@@ -44,7 +44,7 @@ $o-discuss-talkingColor: lighten($success, 10%);
     }
 
     & .o-innerBadge {
-        min-width: 2.7ch; // same as .badge, without using .badge to keep semantics of a single .badge
+        min-width: $o-badge-min-width; // same as .badge, without using .badge to keep semantics of a single .badge
     }
 }
 
